--- a/index.html
+++ b/index.html
@@ -7,7 +7,204 @@
     <link rel="stylesheet" href="style.css" />
     <title>Image Grid</title>
   </head>
-  <body>
-
+  <body> 
+      <div><img class="hero-image" src="assets/images/hero.jpg" width = 100% height=600em></div>
+      <div class="hero-text">
+        <h1>Boolean Image Grid</h1>
+      </div>
+      <div class="layout">
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="top">
+            <img class ="logo" src="assets/images/boolean.jpeg" width = 30px>
+            <img class= "laptop" src="assets/images/boolean-laptop.jpg" width = 200em>
+          </div>
+          <div class="bottom">
+            <div></div>
+            <div id="icons"><img src="assets/icons/github.svg" alt="github" width=20em><img src="assets/icons/twitter.svg" alt="twitter" width=20em></div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa.</div>
+            <div></div>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
